--- a/src/apps/main/tsconfig.json
+++ b/src/apps/main/tsconfig.json
@@ -22,5 +22,6 @@
     }
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./*.d.ts", "./*.config.ts"]
+  "include": ["src", "./*.d.ts", "./*.config.ts"],
+  "exclude": ["postcss.config.js", "prettier.config.js"]
 }
