--- a/src/apps/main/tsconfig.json
+++ b/src/apps/main/tsconfig.json
@@ -22,6 +22,5 @@
     }
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./*.d.ts", "./*.config.ts"],
-  "exclude": ["postcss.config.js", "prettier.config.js"]
+  "include": ["src", "./*.d.ts", "./*.config.ts"]
 }
